科技类消息

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -16,6 +16,7 @@
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "bundler"
   },
+  "extends": "./tsconfig.paths.json",
   "include": [
     "src/**/*"
   ],
