--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "vite build --mode analyze",
     "build:watch": "vite build --watch",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -69,14 +70,12 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "terser": "^5.43.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vite-plugin-dts": "^3.6.3"
-  },
-  "dependencies": {
-    "clsx": "^2.0.0"
   },
   "repository": {
     "type": "git",
