--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "yggjs_rtoast": "latest"
+    "yggjs_rtoast": "1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
